--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Interactive Story</title>
+  <title>Circuit Broken</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'>
 
 </head>
