--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <h4 id=part1text><b>Temptation</b></h4>
     <p id=part1text class="flow-text">
-      You were minding your own business, watching YouTube videos and contemplating whether or not to finally cave in and attempt the latest Instagram stay-home trends when you see a notification on your phone.
+      The time is 10pm. You are minding your own business, watching YouTube videos and contemplating whether or not to finally cave in and attempt the latest Instagram stay-home trends when you see a notification on your phone.
     </p>
     <p id =quote class="flow-text">
       <i>"I've had enough of this, let's sneak out and meet up at a park to "exercise alone" together."</i>
