--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </p>
     <img src="https://i.imgur.com/AzmqteE.jpg" id="pictures">
     <p id=para1 class="flow-text">
-      Singapore has put in place measures known as the Circuit Breaker, where it's citizens have to adhere to social distancing measures responsibly.
+      Singapore has put in place measures known as the Circuit Breaker, where its citizens have to adhere to social distancing measures responsibly.
     </p>
     <p id=para1 class="flow-text">
       You have been complying responsibly for the past month, but have been growing increasingly restless as you miss your friends and meeting up with them.
